[gd_scene load_steps=7 format=3 uid="uid://bduln3m4cri02"]

[ext_resource type="Theme" uid="uid://b2vjmuxqo2wpm" path="res://Themes/UITheme.tres" id="1_3mk43"]
[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_e8lsc"]
[ext_resource type="Texture2D" uid="uid://fw3acg6nt8qp" path="res://Sprites/DownArrowFilled.png" id="2_a11i4"]
[ext_resource type="Texture2D" uid="uid://co8d3pjepenkp" path="res://Sprites/UpArrowFilled.png" id="3_h7m80"]
[ext_resource type="Texture2D" uid="uid://cw2xfly0tdtxr" path="res://Sprites/LeftArrowFilled.png" id="4_mpvoj"]
[ext_resource type="Texture2D" uid="uid://dhuhixcm46dei" path="res://Sprites/RightArrowFilled.png" id="5_76cql"]

[node name="menu" type="Node2D"]
script = ExtResource("1_e8lsc")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_3mk43")

[node name="Title" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DownArrowFilled" type="Sprite2D" parent="UI/Title"]
self_modulate = Color(1, 1, 1, 0.74902)
position = Vector2(154, 34)
scale = Vector2(2, 2)
texture = ExtResource("2_a11i4")

[node name="UpArrowFilled" type="Sprite2D" parent="UI/Title"]
self_modulate = Color(1, 1, 1, 0.74902)
position = Vector2(46, 32)
scale = Vector2(2, 2)
texture = ExtResource("3_h7m80")

[node name="Label" type="Label" parent="UI/Title"]
layout_mode = 0
offset_right = 320.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
text = "Redo Rhythm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Arrows" type="Control" parent="UI/Menu"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LeftArrowFilled" type="Sprite2D" parent="UI/Menu/Arrows"]
position = Vector2(280, 80)
texture = ExtResource("4_mpvoj")

[node name="RightArrowFilled" type="Sprite2D" parent="UI/Menu/Arrows"]
position = Vector2(40, 80)
texture = ExtResource("5_76cql")

[node name="LevelList" type="ItemList" parent="UI/Menu"]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 256.0
offset_bottom = 176.0
item_count = 3
item_0/text = "    Tutorial"
item_1/text = "     Level 1"
item_2/text = "     Level 2"

[node name="WinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="item_activated" from="UI/Menu/LevelList" to="." method="_on_level_list_item_activated"]
[connection signal="item_selected" from="UI/Menu/LevelList" to="." method="_on_level_list_item_selected"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
